--- a/src/less/tag-list.less
+++ b/src/less/tag-list.less
@@ -101,6 +101,7 @@
           flex-shrink: 0;
           transition: all 0.1s linear;
           transform: rotate(0);
+          margin-right: -8px;
 
           > .icon-img {
             width: 18px;
@@ -329,6 +330,7 @@
           flex-shrink: 0;
           transition: all 0.1s linear;
           transform: rotate(0);
+          margin-right: -8px;
 
           > .icon-img {
             width: 18px;
