--- a/src/less/editor.less
+++ b/src/less/editor.less
@@ -96,7 +96,7 @@
   position: relative;
   width: 100%;
   height: auto;
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(59, 59, 59);
 
   > .common-editor-inputer {
     display: inline-block;
@@ -189,6 +189,12 @@
 
 .theme-dark div[data-type='memos_view'] .scroll::-webkit-scrollbar {
   display: none;
+}
+
+div[data-type='memos_view'] .memo-editor-wrapper {
+  .confirm-btn {
+    margin-right: unset;
+  }
 }
 
 // @media only screen and (max-width: 875px) {
