Fixed some issues

--- a/src/less/common/date-picker.less
+++ b/src/less/common/date-picker.less
@@ -180,7 +180,7 @@
       > .icon-img {
         width: 100%;
         height: auto;
-        filter: invert(0.8);
+        fill: #cdcdcd;
       }
 
       &:hover {
@@ -263,7 +263,7 @@
       > .icon-img {
         width: 100%;
         height: auto;
-        filter: invert(0.8);
+        fill: #cdcdcd;
       }
 
       &:hover {
