--- a/src/less/dialog.less
+++ b/src/less/dialog.less
@@ -135,7 +135,7 @@
         > .icon-img {
           width: 20px;
           height: 20px;
-          filter: invert(0.8);
+          fill: #cdcdcd;
         }
 
         &:hover {
