--- a/src/less/global.less
+++ b/src/less/global.less
@@ -249,3 +249,7 @@ div[data-type='memos_view'] .view-content:not(.images-wrapper) img {
 .theme-dark div[data-type='memos_view'].mobile-view html {
   -webkit-overflow-scrolling: touch;
 }
+
+.theme-dark div[data-type='memos_view'] svg {
+  fill: #cdcdcd;
+}
