--- a/src/less/memo-filter.less
+++ b/src/less/memo-filter.less
@@ -119,7 +119,7 @@
       width: 20px;
       height: auto;
       opacity: 0.8;
-      filter: invert(1);
+      fill: #cdcdcd;
     }
 
     &:hover {
