--- a/src/less/memos-header.less
+++ b/src/less/memos-header.less
@@ -128,7 +128,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container {
         width: 18px;
         height: 18px;
 
-        filter: invert(0.8);
+        fill: #cdcdcd;
       }
     }
   }
@@ -190,7 +190,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container {
         width: 18px;
         height: 18px;
 
-        filter: invert(0.8);
+        fill: #cdcdcd;
       }
     }
   }
