--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -186,7 +186,7 @@
       width: 14px;
       height: auto;
       opacity: 0.8;
-      filter: invert(1);
+      fill: #cdcdcd;
     }
 
     > .text-input {
@@ -334,7 +334,7 @@
         width: 14px;
         height: auto;
         opacity: 0.8;
-        filter: invert(1);
+        fill: #cdcdcd;
       }
     }
 
