--- a/src/less/tag-list.less
+++ b/src/less/tag-list.less
@@ -337,7 +337,7 @@
             height: 18px;
             opacity: 0.8;
             color: @text-dark-black;
-            filter: invert(0.8);
+            fill: #cdcdcd;
           }
 
           &.shown {
