--- a/src/less/user-banner.less
+++ b/src/less/user-banner.less
@@ -177,7 +177,7 @@
         > .icon-img {
           width: 20px;
           height: auto;
-          filter: invert(1);
+          fill: #cdcdcd;
         }
       }
     }
