--- a/src/less/daily-memo-diary-dialog.less
+++ b/src/less/daily-memo-diary-dialog.less
@@ -199,7 +199,7 @@
             > .icon-img {
               width: 100%;
               height: auto;
-              filter: invert(0.8);
+              fill: #cdcdcd;
             }
 
             &:hover {
