--- a/src/less/memo-card-dialog.less
+++ b/src/less/memo-card-dialog.less
@@ -256,7 +256,7 @@
             > .icon-img {
               width: 20px;
               height: 20px;
-              filter: invert(0.8);
+              fill: #cdcdcd;
             }
           }
         }
