--- a/src/less/memo-trash.less
+++ b/src/less/memo-trash.less
@@ -454,7 +454,7 @@
           > .icon-img {
             width: 16px;
             height: 16px;
-            filter: invert(0.8);
+            fill: #cdcdcd;
           }
 
           &:hover {
