--- a/src/less/share-memo-image-dialog.less
+++ b/src/less/share-memo-image-dialog.less
@@ -346,7 +346,7 @@
           background-color: rgb(0, 0, 0);
 
           > .icon-img {
-            filter: invert(0.8);
+            fill: #cdcdcd;
           }
         }
       }
