--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -439,7 +439,7 @@
     width: 100%;
 
     > .memo-comment-list {
-      border-top: 1px solid @bg-dark-gray;
+      border-top: 1px solid  #7a7a7a;
       margin-top: 8px;
       overflow-y: auto;
       max-height: 400px;
