Fixed some issue

--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -306,6 +306,8 @@
         width: 40%;
         height: 21px;
         margin-right: 4px;
+        fill: #cdcdcd;
+        filter: invert(0.9);
       }
        > .btns-container {
       .flex(row, flex-end, center);
@@ -379,7 +381,7 @@
           > .icon-img {
             width: 16px;
             height: 16px;
-            filter: invert(0.8);
+            fill: #cdcdcd;
           }
 
           &:hover {
@@ -437,7 +439,7 @@
     width: 100%;
 
     > .memo-comment-list {
-      border-top: 1px solid @bg-dark-gray;
+      border-top: 1px solid  #7a7a7a;
       margin-top: 8px;
       overflow-y: auto;
       max-height: 400px;
