--- a/styles.css
+++ b/styles.css
@@ -246,6 +246,9 @@ div[data-type='memos_view'] .view-content:not(.images-wrapper) img {
 .theme-dark div[data-type='memos_view'].mobile-view html {
   -webkit-overflow-scrolling: touch;
 }
+.theme-dark div[data-type='memos_view'] svg {
+  fill: #cdcdcd;
+}
 .mono-font-family {
   font-family: 'ubuntu-mono', SFMono-Regular, Menlo, Consolas, 'PT Mono', 'Liberation Mono', Courier, monospace;
 }
@@ -440,7 +443,7 @@ div[data-type='memos_view'] .view-content:not(.images-wrapper) img {
 .theme-dark .dialog-wrapper > .dialog-container > .dialog-header-container .btn > .icon-img {
   width: 20px;
   height: 20px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .dialog-wrapper > .dialog-container > .dialog-header-container .btn:hover {
   background-color: #494949;
@@ -797,6 +800,7 @@ div[data-type='memos_view'].mobile-view .menu-btns-popup {
 .theme-dark .preview-image-dialog > .dialog-container > .close-btn > .icon-img {
   width: 28px;
   height: 28px;
+  fill: #cdcdcd;
 }
 .theme-dark .preview-image-dialog > .dialog-container > .close-btn:hover {
   opacity: 0.8;
@@ -1184,7 +1188,7 @@ div[data-type='memos_view'].mobile-view .menu-btns-popup {
 .theme-dark .dialog-wrapper.memo-card-dialog > .dialog-container > .memo-card-container > .header-container > .btns-container > .btn > .icon-img {
   width: 20px;
   height: 20px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .dialog-wrapper.memo-card-dialog > .dialog-container > .memo-card-container > .memo-container {
   display: flex;
@@ -1736,7 +1740,7 @@ div[data-type='memos_view'] .image-container > img {
   background-color: #000000;
 }
 .theme-dark .share-memo-image-dialog > .dialog-container > .dialog-header-container > .btn-group > .close-btn > .icon-img {
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .share-memo-image-dialog > .dialog-container > .dialog-content-container {
   display: flex;
@@ -2624,6 +2628,8 @@ div[data-type='memos_view'] .image-container > img {
   width: 40%;
   height: 21px;
   margin-right: 4px;
+  fill: #cdcdcd;
+  filter: invert(0.9);
 }
 .theme-dark div[data-type='memos_view'] .memo-wrapper > .memo-top-wrapper > .memo-top-right-wrapper > .btns-container {
   display: flex;
@@ -2698,7 +2704,7 @@ div[data-type='memos_view'] .image-container > img {
 .theme-dark div[data-type='memos_view'] .memo-wrapper > .memo-top-wrapper > .memo-top-right-wrapper > .btns-container .btn.more-action-btn > .icon-img {
   width: 16px;
   height: 16px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .memo-wrapper > .memo-top-wrapper > .memo-top-right-wrapper > .btns-container .btn.more-action-btn:hover {
   background-color: unset;
@@ -2776,7 +2782,7 @@ div[data-type='memos_view'] .image-container > img {
   width: 100%;
 }
 .theme-dark div[data-type='memos_view'] .memo-wrapper > .memo-comment-wrapper > .memo-comment-list {
-  border-top: 1px solid #353535;
+  border-top: 1px solid #7a7a7a;
   margin-top: 8px;
   overflow-y: auto;
   max-height: 400px;
@@ -3726,7 +3732,7 @@ div[data-type='memos_view'] .memo-editor-wrapper .confirm-btn {
 .theme-dark .date-picker-wrapper > .date-picker-header > .btn-text > .icon-img {
   width: 100%;
   height: auto;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .date-picker-wrapper > .date-picker-header > .btn-text:hover {
   background-color: #808080;
@@ -3814,7 +3820,7 @@ div[data-type='memos_view'] .memo-editor-wrapper .confirm-btn {
 .theme-dark .editor-date-picker > .date-picker-header > .btn-text > .icon-img {
   width: 100%;
   height: auto;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .editor-date-picker > .date-picker-header > .btn-text:hover {
   background-color: #808080;
@@ -4122,7 +4128,7 @@ div[data-type='memos_view'] .memo-editor-wrapper .confirm-btn {
 .theme-dark .daily-memo-diary-dialog > .dialog-container > .dialog-header-container > .header-wrapper > .btns-container > .btn-text > .icon-img {
   width: 100%;
   height: auto;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark .daily-memo-diary-dialog > .dialog-container > .dialog-header-container > .header-wrapper > .btns-container > .btn-text:hover {
   background-color: #383838;
@@ -4460,7 +4466,7 @@ div[data-type='memos_view'] .memo-editor-wrapper .confirm-btn {
 .theme-dark div[data-type='memos_view'] .user-banner-container > .userinfo-header-container > .action-btn.menu-popup-btn > .icon-img {
   width: 20px;
   height: auto;
-  filter: invert(1);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .user-banner-container > .status-text-container {
   display: flex;
@@ -5926,7 +5932,7 @@ div[data-type='memos_view'] .memo-editor-wrapper .confirm-btn {
   height: 18px;
   opacity: 0.8;
   color: #d2d1cd;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .tags-wrapper > .tags-container .tag-item-container > .btns-container > .action-btn.shown {
   transform: rotate(90deg);
@@ -7460,7 +7466,7 @@ div[data-type='memos_view'].mobile-view #page-wrapper > .content-wrapper {
   width: 14px;
   height: auto;
   opacity: 0.8;
-  filter: invert(1);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .search-bar-container > .search-bar-inputer > .text-input {
   width: 100%;
@@ -7564,7 +7570,7 @@ div[data-type='memos_view'].mobile-view #page-wrapper > .content-wrapper {
   width: 14px;
   height: auto;
   opacity: 0.8;
-  filter: invert(1);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'].mobile-view .search-bar-container > .quickly-action-wrapper {
   display: none;
@@ -7720,7 +7726,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'] .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .btns-container,
 .theme-dark div[data-type='memos_view'] .memos-header-container > .btns-container {
@@ -7758,7 +7764,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .mono-font-family {
   font-family: 'ubuntu-mono', SFMono-Regular, Menlo, Consolas, 'PT Mono', 'Liberation Mono', Courier, monospace;
@@ -7887,7 +7893,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
   width: 20px;
   height: auto;
   opacity: 0.8;
-  filter: invert(1);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .filter-query-container > .copy-memo:hover {
   opacity: 0.8;
@@ -8170,7 +8176,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'] .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .btns-container,
 .theme-dark div[data-type='memos_view'] .memos-header-container > .btns-container {
@@ -8208,7 +8214,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-light div[data-type='memos_view'] .memo-trash-wrapper {
   display: flex;
@@ -8732,7 +8738,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type="memos_view"] .memo-trash-wrapper .memo-wrapper > .memo-top-wrapper > .btns-container .btn.more-action-btn > .icon-img {
   width: 16px;
   height: 16px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type="memos_view"] .memo-trash-wrapper .memo-wrapper > .memo-top-wrapper > .btns-container .btn.more-action-btn:hover {
   background-color: unset;
@@ -9011,7 +9017,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'] .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 .theme-dark div[data-type='memos_view'] .section-header-container > .btns-container,
 .theme-dark div[data-type='memos_view'] .memos-header-container > .btns-container {
@@ -9049,7 +9055,7 @@ div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > 
 .theme-dark div[data-type='memos_view'].mobile-view .memos-header-container > .title-text > .action-btn > .icon-img {
   width: 18px;
   height: 18px;
-  filter: invert(0.8);
+  fill: #cdcdcd;
 }
 div[data-type='memos_view'] .preference-wrapper {
   display: flex;
