Fixed daily note errors

--- a/src/less/dialog.less
+++ b/src/less/dialog.less
@@ -44,8 +44,11 @@
       .btn {
         width: 24px;
         height: 24px;
-        padding: 2px;
+        //padding: unset;
+        padding: 0;
+        margin-right: 0;
         border-radius: 4px;
+        background-color: transparent;
 
         > .icon-img {
           width: 20px;
@@ -128,9 +131,11 @@
       .btn {
         width: 24px;
         height: 24px;
-        padding: 2px;
+        //padding: 2px;
         border-radius: 4px;
-        background-color: black;
+        background-color: transparent;
+        padding: 0;
+        margin-right: 0;
 
         > .icon-img {
           width: 20px;
