--- a/src/less/global.less
+++ b/src/less/global.less
@@ -253,3 +253,12 @@ div[data-type='memos_view'] .view-content:not(.images-wrapper) img {
 .theme-dark div[data-type='memos_view'] svg {
   fill: #cdcdcd;
 }
+
+.theme-dark .dialog-wrapper {
+  .btn-group, .btns-container {
+    //svg{
+      fill: #cdcdcd;
+    //}
+  }
+
+}
