--- a/src/less/memo-card-dialog.less
+++ b/src/less/memo-card-dialog.less
@@ -42,11 +42,13 @@
           .flex(row, flex-end, center);
 
           > .btn {
-            .flex(row, center, center);
-            width: 24px;
-            height: 24px;
-            margin-left: 4px;
-            border-radius: 4px;
+            //.flex(row, center, center);
+            //width: 24px;
+            //height: 24px;
+            //margin-left: 4px;
+            //border-radius: 4px;
+            background-color: transparent;
+            padding: 0;
 
             &:hover {
               background-color: white;
@@ -242,12 +244,13 @@
           // background-color: transparent;
 
           > .btn {
-            .flex(row, center, center);
-            width: 24px;
-            height: 24px;
-            margin-left: 4px;
-            border-radius: 4px;
-            background-color: #5f5f5f;
+            //.flex(row, center, center);
+            //width: 24px;
+            //height: 24px;
+            //margin-left: 4px;
+            //border-radius: 4px;
+            background-color: transparent;
+            padding: 0;
 
             &:hover {
               background-color: rgb(68, 68, 68);
